[gd_scene load_steps=2 format=3 uid="uid://c6erw7erxe57k"]

[ext_resource type="Script" path="res://scripts/card_ui.gd" id="1_t4cab"]

[node name="CardUI" type="Control"]
custom_minimum_size = Vector2(1152, 648)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_t4cab")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1144.0
offset_bottom = -640.0
text = "test button"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 600.0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.360784, 0.509804, 0.611765, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="SubmitHand" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Submit Hand"
metadata/_edit_lock_ = true

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"
metadata/_edit_lock_ = true

[node name="CardTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="TimerLabel" type="Label" parent="CardTimer"]
offset_left = 534.0
offset_top = 133.0
offset_right = 673.0
offset_bottom = 185.0

[connection signal="button_up" from="MarginContainer/VBoxContainer/SubmitHand" to="." method="_on_submit_hand_button_up"]
[connection signal="timeout" from="CardTimer" to="." method="_on_card_timer_timeout"]
